tests/e2e/check-config/empty-config-null/snapshot.txt
[1] redocly.yaml:1:1 at #/

Expected type `ConfigRoot` (object) but got `null`

1 | # it means `null` when converted to json
  | ^
2 |

Error was generated by the configuration struct rule.



❌ Your config has 1 error.


